--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-        <title>Waba BlockCraft</title>
+        <title>WabaCraft</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width,user-scalable=yes,minimum-scale=1,maximum-scale=1"/>
-        <meta name="description" content="BlockCraft is a free to play alternative to Minecraft in the browser implemented in Typescript and WebGL. Features of the game include multiplayer PvP, hundreds of blocks to build with, crafting and much more!"/>
+        <meta name="description" content="Wabacraft is a free to play alternative to Minecraft in the browser implemented in Typescript and WebGL. Features of the game include multiplayer PvP, hundreds of blocks to build with, crafting and much more!"/>
         <meta name="theme-color" content="#317EFB"/>
-        <meta name="keywords" content="Three.js, Minecraft, Free, BlockCraft, Block, Craft"/>
-        <meta name="author" content="Victor Wei, qhyun"/>
+        <meta name="keywords" content="Three.js, Minecraft, Free, BlockCraft, Block, Craft, Wabacraft, Waba"/>
+        <meta name="author" content="Victor Wei, qhyun. Vincent"/>
         <meta property="og:title" content="BlockCraft"/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://wabawaba.org/"/>
@@ -116,7 +116,7 @@
            *******************
            Please do not remove the PREROLL_ELEM
            from the page, it will be hidden automaticly.
-           If you do want to remove it use the AIP_REMOVE callback.
+           If you do want to remove it use the AIP_REMOVE callback. I'm gay. jkjk
           */
                         console.error("Preroll Ad Completed: " + evt);
                     },
@@ -124,11 +124,11 @@
                 });
             });
         </script>
-        <script async src="https://web.archive.org/web/20220724170806js_/https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3693486377553906" crossorigin="anonymous"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3693486377553906" crossorigin="anonymous"></script>
         <div id="loading-screen">
             <div class="background-image" style="image-rendering: pixelated"></div>
             <div id="loading-screen-container">
-                <div id="loading-screen-text">BlockCraft</div>
+                <div id="loading-screen-text">Wabacraft</div>
                 <div id="progress-bar">
                     <div id="progress-bar-inner"></div>
                 </div>
@@ -141,7 +141,7 @@
         <div id="canvas-overlay"></div>
         <div id="account-overlay"></div>
         <div id="dat-gui"></div>
-        <input spellcheck="false" autocomplete="off" id="chat-input" class="game-input" placeholder="> Press Enter to Chat" maxlength="100" style="display: none; z-index: 3"/>
+        <input spellcheck="false" autocomplete="off" id="chat-input" class="game-input" placeholder="> Press Enter to Chat or / for Commands" maxlength="100" style="display: none; z-index: 3"/>
         <input spellcheck="false" autocomplete="off" id="search-input" class="game-input" placeholder="Search Items" maxlength="100" style="display: none; z-index: 5"/>
         <script>
             (function() {
@@ -177,23 +177,3 @@
         </script>
     </body>
 </html>
-<!--
-     FILE ARCHIVED ON 17:08:06 Jul 24, 2022 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 22:22:09 Oct 18, 2025.
-     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
-
-     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
-     SECTION 108(a)(3)).
--->
-<!--
-playback timings (ms):
-  captures_list: 0.734
-  exclusion.robots: 0.037
-  exclusion.robots.policy: 0.022
-  esindex: 0.011
-  cdx.remote: 199.733
-  LoadShardBlock: 1275.623 (3)
-  PetaboxLoader3.datanode: 1019.383 (4)
-  PetaboxLoader3.resolve: 166.629 (2)
-  load_resource: 144.975
--->
